# dwarf-cpp23

./: .gitignore  CMakeLists.txt  Makefile  README.md  run.sh  tags
assets/: D.ase  F.ase  W.ase  corner.ase  door.ase  dwarf 3.ase  dwarf 5.ase  dwarf Copy.ase  dwarf.ase  dwarf10-reshade.ase  dwarf10.ase  dwarf11.ase  dwarf2 shading.ase  dwarf2.ase  dwarf5.ase  dwarf6.ase  dwarf7.ase  dwarf8.ase  dwarf9.ase  face.ase  floor.ase  ground1.ase  ground2.ase  ground3-shadow.ase  ground3.ase  ground4.ase  smaug.ase  smaug2.ase  smaug3.ase  smaug4.ase  smaug5.ase  smaug6 animation 2.ase  smaug6 animation.ase  smaug6.ase  smaug7.ase  smaug7.json  smaug8.ase  smaug_body_turn_right.ase  smaug_freet.ase  smaug_head_turn_down.ase  (+3 more)
build-win/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
src/: canvas.cpp  canvas.cppm  config.cppm  debug.cppm  entities.cppm  entity.cppm  game.cpp  game.cppm  ground.cppm  init.cppm  main.cpp  products.cppm  sdl.cppm  tasks.cppm  tiles.cpp  tiles.cppm
